--- a/src/Bookshop/BookshopBundle/Resources/views/Dashboard/billingAddressForm.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Dashboard/billingAddressForm.html.twig
@@ -1,97 +1,9 @@
 <form action="{{ path('dashboard_billing_addr_edit') }}" method="POST" id="form-validate" class="fos_user_profile_edit">
-
     <div class="fieldset">
         <h2 class="legend">{{ 'address.edit.title.billing'|trans({}, 'BookshopBundle') }}</h2>
-        <ul class="form-list">
-            <li class="fields">
-                <div class="customer-name">
-                    <div class="field name-firstname">
-                        <label for="firstname" class="required"><em>*</em>{{ 'address.show.first_name'|trans({},'BookshopBundle') }}</label>
-                        <div class="input-box">
-                            {% set firstNClass = '' %}
-                            {% if form_errors(form.firstName) %} 
-                                {% set firstNClass = firstNClass~'validation-failed ' %}
-                            {% endif %}
-                            {{ form_widget(form.firstName, {'attr': {'class': firstNClass~'input-text required-entry'} }) }}
-                            {% if form_errors(form.firstName) %}
-                                <div class="validation-advice" id="advice-required-entry-email" style="">{{ form_errors(form.first_name) }}</div>
-                            {% endif %}
-                        </div>
-                    </div>
-                    <div class="field name-lastname">
-                        <label for="lastname" class="required"><em>*</em>{{ 'address.show.last_name'|trans({},'BookshopBundle') }}</label>
-                        <div class="input-box">
-                            {% set lastNClass = '' %}
-                            {% if form_errors(form.lastName) %} 
-                                {% set lastNClass = lastNClass~'validation-failed ' %}
-                            {% endif %}
-                            {{ form_widget(form.lastName, {'attr': {'class': lastNClass~'input-text required-entry'} }) }}
-                            {% if form_errors(form.lastName) %}
-                                <div class="validation-advice" id="advice-required-entry-email" style="">{{ form_errors(form.first_name) }}</div>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="field">
-                    <label for="email_address" class="required"><em>*</em>{{ 'address.show.email'|trans({},'BookshopBundle') }}</label>
-                    <div class="input-box">
-                        {% set emailClass = '' %}
-                        {% if form_errors(form.email) %} 
-                            {% set emailClass = emailClass~'validation-failed ' %}
-                        {% endif %}
-                        {{ form_widget(form.email, {'attr': {'class': emailClass~'input-text required-entry'} }) }}
-                        {% if form_errors(form.email) %}
-                            <div class="validation-advice" id="advice-required-entry-email" style="">{{ form_errors(form.first_name) }}</div>
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="field">
-
-                    <label for="address">{{ 'address.show.address'|trans({},'BookshopBundle') }}</label>
-                    <div class="input-box">
-                        {% set addressClass = '' %}
-                        {% if form_errors(form.address) %} 
-                            {% set addressClass = addressClass~'validation-failed ' %}
-                        {% endif %}
-                        {{ form_widget(form.address, {'attr': {'class': addressClass~'input-text required-entry'} }) }}
-                        {% if form_errors(form.address) %}
-                            <div class="validation-advice" id="advice-required-entry-address" style="">{{ form_errors(form.first_name) }}</div>
-                        {% endif %}
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="field">
-                    <label for="city" class="required"><em>*</em>{{ 'address.show.city'|trans({},'BookshopBundle') }}</label>
-                    <div class="input-box">
-                        {% set cityClass = '' %}
-                        {% if form_errors(form.city) %} 
-                            {% set cityClass = cityClass~'validation-failed ' %}
-                        {% endif %}
-                        {{ form_widget(form.city, {'attr': {'class': cityClass~'input-text required-entry'} }) }}
-                        {% if form_errors(form.city) %}
-                            <div class="validation-advice" id="advice-required-entry-city" style="">{{ form_errors(form.first_name) }}</div>
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="field">
-
-                    <label for="country">{{ 'address.show.country'|trans({},'BookshopBundle') }}</label>
-                    <div class="input-box">
-                        {% set countryClass = '' %}
-                        {% if form_errors(form.country) %} 
-                            {% set countryClass = countryClass~'validation-failed ' %}
-                        {% endif %}
-                        {{ form_widget(form.country, {'attr': {'class': countryClass~'input-text required-entry'} }) }}
-                        {% if form_errors(form.country) %}
-                            <div class="validation-advice" id="advice-required-entry-country" style="">{{ form_errors(form.first_name) }}</div>
-                        {% endif %}
-                    </div>
-                </div>
-            </li>
-        </ul>
+        
+        {% include 'BookshopBookshopBundle:Dashboard:addressFormFields.html.twig' with { 'form': form } %}
+        
     </div>
 
 
@@ -100,14 +12,14 @@
             {% if not app.request.server.get('HTTP_REFERER') is null %}
         <p class="back-link"><a href="{{app.request.server.get('HTTP_REFERER') }}" class="back-link"><small>&laquo; </small>Back</a></p>
             {% endif %}
-        
+
         {{ form_rest(form) }}
 
         <div>
-            <button type="submit" title="{{ 'address.edit.label'|trans({}, 'BookshopBundle') }}" class="button" value="" >
-                <span><span>{{ 'address.edit.label'|trans({}, 'BookshopBundle') }}</span></span>
+            <button type="submit" title="{{ 'address.edit.save'|trans({}, 'BookshopBundle') }}" class="button" value="" >
+                <span><span>{{ 'address.edit.save'|trans({}, 'BookshopBundle') }}</span></span>
             </button>
-            
+
         </div>
     </div>
 </form>
