dashboardMenu without my orders link

--- a/src/Bookshop/BookshopBundle/Resources/views/dashboardLayout.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/dashboardLayout.html.twig
@@ -17,13 +17,10 @@
                     <strong><span>My Account</span></strong>
                 </div>
                 <div class="block-content">
-                    <ul>
-                        <li class="current"><strong>Account Dashboard</strong></li>
-                        <li><a href="#">Account Information</a></li>
-                        <li><a href="#">My Orders</a></li>
-                        <li><a href="#">Billing address</a></li>
-                        <li class="last"><a href="#">Shipping address</a></li>
-                    </ul>
+                    
+         {{ knp_menu_render('BookshopBookshopBundle:Builder:dashboardMenu', 
+                            {'template': 'BookshopBookshopBundle:Menu:dashboard_menu.html.twig'}) }}
+                    
                 </div>
             </div>
             <!-- render cart -->
