started working on checkout

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,7 +29,7 @@
                             <ul class="links">
                                 <li class="first" ><a href="dashboard.html" title="My Account" >My Account</a></li>
                                 <li ><a href="cart.html" title="My Cart" class="top-link-cart">My Cart</a></li>
-                                <li class="last" ><a href="checkout.html" title="Checkout" class="top-link-checkout">Checkout</a></li>
+                                <li class="last" ><a href="{{ path('checkout') }}" title="Checkout" class="top-link-checkout">Checkout</a></li>
                             </ul>
 
                         </div>
