--- a/src/Bookshop/BookshopBundle/Resources/views/dashboardLayout.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/dashboardLayout.html.twig
@@ -14,7 +14,7 @@
         <div class="col-left sidebar">
             <div class="block block-account">
                 <div class="block-title">
-                    <strong><span>My Account</span></strong>
+                    <strong><span>{{'dashboard.menu_title'|trans({},'BookshopBundle')}}</span></strong>
                 </div>
                 <div class="block-content">
                     
