--- a/src/Bookshop/BookshopBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Dashboard/index.html.twig
@@ -1,16 +1,15 @@
 {% extends "BookshopBookshopBundle::dashboardLayout.html.twig" %}
-
+{% set bundle = 'BookshopBundle' %}
 {% block fos_user_content %}
 <div class="my-account">
     <div class="dashboard">
         <div class="page-title">
-            <h1>My Dashboard</h1>
+            <h1>{{'dashboard.title'|trans({}, bundle)}}</h1>
         </div>
         <div class="welcome-msg">
-            <p class="hello"><strong>Hello, {{ app.user ? app.user.firstName~" "~app.user.lastName : 'Anonymous' }}!</strong></p>
-            <p>From your My Account Dashboard you have the ability to view a
-                snapshot of your recent account activity and update your account
-                information. Select a link below to view or edit information.</p>
+            {% set fullname = app.user ? app.user.firstName~" "~app.user.lastName : 'Anonymous' %}
+            <p class="hello"><strong>{{'dashboard.greeting'|trans({'%fullname%' : fullname},bundle)}} </strong></p>
+            <p>{{'dashboard.info'|trans({},bundle)}}</p>
         </div>
         <div class="box-account box-recent">
             <div class="box-head">
@@ -52,14 +51,14 @@
         </div>
         <div class="box-account box-info">
             <div class="box-head">
-                <h2>Account Information</h2>
+                <h2>{{'menu.dashboard.account_info'|trans({},bundle)}}</h2>
             </div>
             <div class="col2-set">
                 <div class="col-1">
                     <div class="box">
                         <div class="box-title">
                             <h3>Contact Information</h3>
-                            <a href="{{path("fos_user_profile_show")}}">Edit</a>
+                            <a href="{{path("fos_user_profile_show")}}">{{'profile.edit.label'|trans({},bundle)}}</a>
                         </div>
                         <div class="box-content">
                             <p>
@@ -72,7 +71,7 @@
             <div class="col2-set">
                 <div class="box">
                     <div class="box-title">
-                        <h3>Address Book</h3>
+                        <h3>{{'address.label_book'|trans({},bundle)}}</h3>
                     </div>
                     <div class="box-content">
                         <div class="col-1">
