--- a/src/Bookshop/BookshopBundle/Resources/views/layout.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/layout.html.twig
@@ -3,14 +3,21 @@
 {%block collayout%}
 <div class="main-container col3-layout">
     <div class="main">
+        <div class="col-wrapper">
+            
+            {% block body %}
+                
+            {% endblock body %}
+            {% block leftsidebar%}{% endblock %}
+        </div>
         {% block fos_user_content %}
         <div class="col-wrapper">
-            {% block leftsidebar%}{% endblock %}
-                {% block body %}
-                {% endblock body %}
+            
+                
             
         </div>
         {% endblock %}
+            
     </div>
 </div>
 {%endblock %}
