--- a/src/Bookshop/BookshopBundle/Resources/views/Default/productdetail.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Default/productdetail.html.twig
@@ -111,22 +111,11 @@
                     </div>
                 </div>
         {% endblock %}
-        {% block cart %}
-                <div class="col-right sidebar">
-                                    {%block rightsidebar%}
-                        <div class="block block-cart">
-                            <div class="block-title">
-                                <strong><span>My Cart</span></strong>
-                            </div>
-                            <div class="block-content">
-                                <p class="empty">You have no items in your shopping cart.</p>
-                            </div>
-                        </div>
-        {%endblock%}
+                                    {% block rightsidebar %}
+                {{ parent() }}
+            {% endblock %}
 
-                    </div>
-  {% endblock %}
-                </div>
             </div>
+        </div>
 {% endblock %}
 
