--- a/app/Resources/views/admin_base.html.twig
+++ b/app/Resources/views/admin_base.html.twig
@@ -3,9 +3,63 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Admin</title>
-        <link rel="stylesheet" href="bundles/bookshopadmin/css/screen.css" type="text/css" media="screen" title="default" />
+        <link rel="stylesheet" href="{{ asset ('bundles/bookshopadmin/css/screen.css')}}" type="text/css" media="screen" title="default" />
     </head>
-        {% block body%}
-    
-        {% endblock %}
+        <body>
+        <!-- Start: page-top-outer -->
+        <div id="page-top-outer">    
+            <!-- Start: page-top -->
+            <div id="page-top"> 
+                <h3 style="padding-top: 25px; text-align: center;" class="special">Administrator</h3>
+                <div class="clear"></div>
+            </div>
+            <!-- End: page-top -->
+        </div>
+        <!-- End: page-top-outer -->
+        <div class="clear">&nbsp;</div>
+        <!--  start nav-outer-repeat................................................................................................. START -->
+        <div class="nav-outer-repeat"> 
+            <!--  start nav-outer -->
+            <div class="nav-outer"> 
+                <!-- start nav-right -->
+                <div id="nav-right">
+                    <div class="nav-divider">&nbsp;</div>
+                    <div class="showhide-account"><a href="/admin/editUser?id=<?php echo $_SESSION['user_id']; ?>"><img src="{{ asset('bundles/bookshopadmin/images/shared/nav/nav_myaccount.gif') }}" width="93" height="14" alt="" /></a></div>
+                    <div class="nav-divider">&nbsp;</div>
+                    <a href="{{path('fos_user_security_logout')}}" id="logout"><img src="{{ asset('bundles/bookshopadmin/images/shared/nav/nav_logout.gif') }}" width="64" height="14" alt="" /></a>
+                    <div class="clear">&nbsp;</div>
+                    <div class="showhide-account"><h3>Welcome, {{  app.user.username }}!</h3></div>
+                </div>
+                <!-- end nav-right -->
+                <!--  start nav -->
+                <div class="nav">
+                    {% block navigation%}
+                    {% endblock %}
+                </div>
+                <!--  start nav -->
+            </div>
+            <div class="clear"></div>
+            <!--  start nav-outer -->
+        </div>
+        <!--  start nav-outer-repeat................................................... END -->
+        <div class="clear"></div>
+        <!-- start content-outer ........................................................................................................................START -->
+        <div id="content-outer">
+            <!-- start content -->
+            <div id="content">
+                {% block body %}
+                {% endblock %}
+            </div>
+            <!--  end content -->
+            <div class="clear">&nbsp;</div>
+        </div>
+        <!--  end content-outer........................................................END -->
+        <div class="clear">&nbsp;</div>
+        <!-- start footer -->         
+        <div id="footer">
+            <div class="clear">&nbsp;</div>
+        </div>
+        <!-- end footer -->
+        </body>
+        
 </html>
