--- a/src/Bookshop/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Bookshop/AdminBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,9 @@
-Hello !
-{{ users.getTotalItemCount }}<br/>
-{% for user in  users %}
-        {{ user.username }}<br/>
-{% endfor %}
+{% extends "BookshopAdminBundle::layout.html.twig"  %}
+{% block body %}
+<!--  start page-heading -->
+<div id="page-heading">
+    <h1>Administrator home page ...</h1>
+</div>
+<!-- end page-heading -->
+
+{% endblock %}
