--- a/src/Bookshop/AdminBundle/Resources/views/UserAdmin/index.html.twig
+++ b/src/Bookshop/AdminBundle/Resources/views/UserAdmin/index.html.twig
@@ -1,1 +1,94 @@
 {% extends "BookshopAdminBundle::layout.html.twig"  %}
+{% block body %}
+<!--  start page-heading -->
+<div id="page-heading">
+    <h1>User list</h1>
+</div>
+<!-- end page-heading -->
+
+<table border="0" width="100%" cellpadding="0" cellspacing="0" id="content-table">
+    <tr>
+        <th rowspan="3" class="sized"><img src="{{ asset('bundles/bookshopadmin/images/shared/side_shadowleft.jpg') }}" width="20" height="300" alt="" /></th>
+        <th class="topleft"></th>
+        <td id="tbl-border-top">&nbsp;</td>
+        <th class="topright"></th>
+        <th rowspan="3" class="sized"><img src="{{ asset('bundles/bookshopadmin/images/shared/side_shadowright.jpg') }}" width="20" height="300" alt="" /></th>
+    </tr>
+    <tr>
+        <td id="tbl-border-left"></td>
+        <td>
+            <!--  start content-table-inner ...................................................................... START -->
+            <div id="content-table-inner">
+
+                <!--  start table-content  -->
+                <div id="table-content">
+
+                    
+                    <!--  start product-table ..................................................................................... -->
+                    <form id="mainform" action="">
+                        <table border="0" width="100%" cellpadding="0" cellspacing="0" id="product-table">
+                            <tr>
+                                <th class="table-header-repeat line-left minwidth-1">{{ knp_pagination_sortable(users, 'Username'|trans({},'BookshopBookshopBundle'), 'u.username') }}</th>
+                                <th class="table-header-repeat line-left minwidth-1">{{ knp_pagination_sortable(users, 'Last_Name'|trans({},'BookshopBookshopBundle'), 'u.last_name') }}</th>
+                                <th class="table-header-repeat line-left minwidth-1">{{ knp_pagination_sortable(users, 'First_Name'|trans({},'BookshopBookshopBundle'), 'u.first_name') }}</th>
+                                <th class="table-header-repeat line-left minwidth-1">{{ knp_pagination_sortable(users, 'Email'|trans({},'BookshopBookshopBundle'), 'u.email') }}</th>
+                                <th class="table-header-repeat line-left">{{ knp_pagination_sortable(users, 'Enabled'|trans({},'BookshopBookshopBundle'), 'u.enabled') }}</th>
+                                <th class="table-header-options line-left"><a href="">Options</a></th>
+                            </tr>
+                            {% for user in  users %}
+                            {% if loop.index is odd %}
+                            <tr>
+                            {% else %}
+                            <tr class="alternate-row">
+                            {% endif %}
+                                <td>{{ user.username }}</td>
+                                <td>{{ user.lastName }}</td>
+                                <td>{{ user.firstName }}</td>
+                                <td>{{ user.email }}</td>
+                                <td>{{ user.enabled }}</td>
+                                <td class="options-width">
+                                    <a href="" title="Edit" class="icon-1 info-tooltip"></a>
+                                    {% if user.enabled == 1 %}
+                                    <a href="{{path('bookshop_admin_user_disable', {userID : user.id})}}" title="Deactivate" class="icon-2 info-tooltip"></a>
+                                    {% else %}
+                                    <a href="{{path('bookshop_admin_user_enable', {userID : user.id})}}" title="Activate" class="icon-5 info-tooltip"></a>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            {% endfor %}
+                            
+                        </table>
+                        <!--  end product-table................................... --> 
+                    </form>
+                </div>
+                <!--  end content-table  -->
+
+                <!--  start paging..................................................... -->
+                <table border="0" cellpadding="0" cellspacing="0" id="paging-table">
+                    <tr>
+                        <td>
+                            {{ knp_pagination_render(users,'BookshopAdminBundle:Pagination:pagination.html.twig') }}
+                            <!--<a href="" class="page-far-left"></a>
+                            <a href="" class="page-left"></a>
+                            <div id="page-info">Page <strong>1</strong> / {{ users.getTotalItemCount }}</div>
+                            <a href="" class="page-right"></a>
+                            <a href="" class="page-far-right"></a>-->
+                        </td>
+                    </tr>
+                </table>
+                <!--  end paging................ -->
+
+                <div class="clear"></div>
+
+            </div>
+            <!--  end content-table-inner ............................................END  -->
+        </td>
+        <td id="tbl-border-right"></td>
+    </tr>
+    <tr>
+        <th class="sized bottomleft"></th>
+        <td id="tbl-border-bottom">&nbsp;</td>
+        <th class="sized bottomright"></th>
+    </tr>
+</table>
+{% endblock %}
