--- a/src/Bookshop/BookshopBundle/Resources/views/Cart/index.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Cart/index.html.twig
@@ -4,7 +4,7 @@
     </div>
     <div class="block-content">
         <div class="summary">
-            <p class="amount">There are <a href="cart.html">{{ items|length }} items</a> in your cart.</p>
+            <p class="amount">There are <a href="{{path('mycart')}}">{{ items|length }} items</a> in your cart.</p>
             <p class="subtotal">
                 <span class="label">Cart Subtotal:</span> <span class="price">{{ cart.total }} US$</span>
             </p>
@@ -20,15 +20,15 @@
             {% for i in 0..2 %}
                 {% if items[i] is defined %}
                 <li class="item">
-                    <a href="#" title="Ottoman" class="product-image">
-                        <img src="images/couchlarge_2.jpg" width="50" height="50" alt="Ottoman" />
+                    <a href="{{path('product',{'id':items[i].productId.id})}}" title="{{items[i].productId.title}}" class="product-image">
+                        <img src="{%if items[i].productId.image!=null%}{{asset([items[i].productId.image.path,items[i].productId.image.filename]|join)}}{%endif%}" width="50" height="50" alt="Ottoman" />
                     </a>
                     <div class="product-details">
-                        <a href="#" title="Remove This Item" class="btn-remove">Remove This Item</a>
-                        <a href="#" title="Edit item" class="btn-edit">Edit item</a>
-                        <p class="product-name"><a href="#">{{items[i].title}}</a></p>
-                        <strong>1</strong> x
-                        <span class="price">{{items[i].price}} US$</span>
+                        <a href="{{path('deleteproduct',{'id':items[i].id,'cartid':cart.id})}}" title="Remove This Item" class="btn-remove">Remove This Item</a>
+                        <a href="{{path('mycart')}}" title="Edit item" class="btn-edit">Edit item</a>
+                        <p class="product-name"><a href="{{path('product',{'id':items[i].productId.id})}}">{{items[i].title}}</a></p>
+                        <strong>{{items[i].quantity}}</strong> x
+                        <span class="price">{{items[i].productId.price}} US$</span>
                     </div>
                 </li>
                 {% endif %}
