--- a/src/Bookshop/BookshopBundle/Resources/views/Default/productdetail.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Default/productdetail.html.twig
@@ -35,7 +35,7 @@
         <div class="col-main">
             <div class="product-view">
                 <div class="product-essential">
-                    <form action="" method="post" id="product_addtocart_form">
+                    <form action="{{path ('addproduct')}}" method="post" id="product_addtocart_form">
                         <div class="product-shop">
                             <div class="product-name">
                                 <h1>{{ product.title }}</h1>
@@ -54,8 +54,9 @@
                             <div class="add-to-box">
                                 <div class="add-to-cart">
                                     <label for="qty">Qty:</label>
-                                    <input type="text" name="qty" id="qty" maxlength="12" value="1" title="Qty" class="input-text qty" />
-                                    <button type="button" title="Add to Cart" class="button btn-cart" ><span><span>Add to Cart</span></span></button>
+                                    <input type="text" name="quantity" id="qty" maxlength="12" value="1" title="Qty" class="input-text qty" />
+                                    <input type="hidden" name="productid" value="{{product.id}}">
+                                    <button type="submit" title="Add to Cart" class="button btn-cart" ><span><span>Add to Cart</span></span></button>
                                 </div>
                             </div>
                             {% else %}
