--- a/src/Bookshop/BookshopBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Registration/confirmed.html.twig
@@ -9,3 +9,5 @@
         {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>{% endif %}
     {% endif %}
 {% endblock fos_user_content %}
+{%block leftsidebar%}{% endblock %}
+{%block rightsidebar%}{% endblock %}
