--- a/src/Bookshop/AdminBundle/Resources/views/Pagination/pagination.html.twig
+++ b/src/Bookshop/AdminBundle/Resources/views/Pagination/pagination.html.twig
@@ -24,39 +24,22 @@
                 
     {% endif %}
 
-    {% if startPage > 1 %}
-            
-                <a href="{{ path(route, query|merge({(pageParameterName): 1})) }}" >1</a>
-        {% if startPage == 3 %}
-                <a href="{{ path(route, query|merge({(pageParameterName): 2})) }}">2</a>
-        {% elseif startPage != 2 %}
-                <span>&hellip;</span>
-        {% endif %}
-    {% endif %}
+    
 
     {% for page in pagesInRange %}
         {% if page != current %}
                 <!-- <a href="{{ path(route, query|merge({(pageParameterName): page})) }}">{{ page }}</a> -->
         {% else %}
-                <div id="page-info"><strong>{{ page }}</strong> / {{ endPage }}</div>
+                <div id="page-info"><strong>{{ page }}</strong> / {{ pageCount }}</div>
         {% endif %}
 
     {% endfor %}
 
-    {% if pageCount > endPage %}
-        {% if pageCount > (endPage + 1) %}
-            {% if pageCount > (endPage + 2) %}
-                <span>&hellip;</span>
-            {% else %}
-                <a href="{{ path(route, query|merge({(pageParameterName): (pageCount - 1)})) }}">{{ pageCount -1 }}</a>
-            {% endif %}
-        {% endif %}
-                <a href="{{ path(route, query|merge({(pageParameterName): pageCount})) }}">{{ pageCount }}</a>
-    {% endif %}
+    
 
     {% if next is defined %}
                 <a href="{{ path(route, query|merge({(pageParameterName): next})) }}" class="page-right"></a>
-                <a href="{{ path(route, query|merge({(pageParameterName): endPage})) }}" class="page-far-right"></a>
+                <a href="{{ path(route, query|merge({(pageParameterName): pageCount})) }}" class="page-far-right"></a>
     {% else %}
                 <!-- <span>&nbsp;&raquo;</span> -->
     {% endif %}
