Inserted Success & Error messages

--- a/src/Bookshop/BookshopBundle/Resources/views/Default/mycart.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Default/mycart.html.twig
@@ -15,6 +15,24 @@
             </li>
         </ul>
     </div>
+{% for flashMessage in app.session.flashbag.get('success') %}
+    <ul class="messages">
+        <li class="success-msg">
+            <ul>
+                <div>{{ flashMessage }}</div>
+            </ul>
+        </li>
+    </ul>
+{% endfor %}
+{% for flashMessage1 in app.session.flashbag.get('error') %}
+    <ul class="messages">
+        <li class="error-msg">
+            <ul>
+                <div>{{ flashMessage1 }}</div>
+            </ul>
+        </li>
+    </ul>
+{% endfor %}
     {#<ul class="messages">
         <li class="success-msg">
             <ul>
