--- a/src/Bookshop/BookshopBundle/Resources/views/Default/search.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Default/search.html.twig
@@ -1,5 +1,23 @@
 {% extends 'BookshopBookshopBundle::layout.html.twig'%}
 {% block body%}
+{% for flashMessage in app.session.flashbag.get('success') %}
+    <ul class="messages">
+        <li class="success-msg">
+            <ul>
+                <div>{{ flashMessage }}</div>
+            </ul>
+        </li>
+    </ul>
+{% endfor %}
+{% for flashMessage1 in app.session.flashbag.get('error') %}
+    <ul class="messages">
+        <li class="error-msg">
+            <ul>
+                <div>{{ flashMessage1 }}</div>
+            </ul>
+        </li>
+    </ul>
+{% endfor %}
 <div class="breadcrumbs">
     <ul>
         <li class="home">
