--- a/src/Bookshop/BookshopBundle/Resources/views/Default/category.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Default/category.html.twig
@@ -182,6 +182,25 @@
 
 {% endblock%}
 {% block body%}
+
+{% for flashMessage in app.session.flashbag.get('success') %}
+    <ul class="messages">
+        <li class="success-msg">
+            <ul>
+                <div>{{ flashMessage }}</div>
+            </ul>
+        </li>
+    </ul>
+{% endfor %}
+{% for flashMessage1 in app.session.flashbag.get('error') %}
+    <ul class="messages">
+        <li class="error-msg">
+            <ul>
+                <div>{{ flashMessage1 }}</div>
+            </ul>
+        </li>
+    </ul>
+{% endfor %}
                                                           <div class="breadcrumbs">
                                                               <ul>
                                                                   <li class="home">
