--- a/src/Bookshop/BookshopBundle/Resources/views/Default/productdetail.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Default/productdetail.html.twig
@@ -22,16 +22,24 @@
 
 
 
-{#   <div id="messages_product_view">
-        <ul class="messages">
-            <li class="success-msg">
-                <ul>
-                    <li><span>Ottoman was added to your shopping cart.</span></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-#}
+{% for flashMessage in app.session.flashbag.get('success') %}
+    <ul class="messages">
+        <li class="success-msg">
+            <ul>
+                <div>{{ flashMessage }}</div>
+            </ul>
+        </li>
+    </ul>
+{% endfor %}
+{% for flashMessage1 in app.session.flashbag.get('error') %}
+    <ul class="messages">
+        <li class="error-msg">
+            <ul>
+                <div>{{ flashMessage1 }}</div>
+            </ul>
+        </li>
+    </ul>
+{% endfor %}
         <div class="col-main">
             <div class="product-view">
                 <div class="product-essential">
