--- a/src/Bookshop/AdminBundle/Resources/views/ProductAdmin/index.html.twig
+++ b/src/Bookshop/AdminBundle/Resources/views/ProductAdmin/index.html.twig
@@ -84,8 +84,11 @@
                                 <td>{{product.stock}}</td>
                                 <td class="options-width">
                                     <a href="" title="Edit" class="icon-1 info-tooltip"></a>
-                                    <a href="" title="Delete" class="icon-2 info-tooltip"></a>
-                                    <a href="" title="Activate" class="icon-5 info-tooltip"></a>
+                                    {% if product.active == 1 %}
+                                    <a href="{{path('bookshop_admin_product_delete',{'id': product.id})}}" title="Delete" class="icon-2 info-tooltip"></a>
+                                    {% else %}
+                                    <a href="{{path('bookshop_admin_product_undelete',{'id': product.id})}}" title="Undelete" class="icon-5 info-tooltip"></a>
+                                    {% endif %}
                                 </td>
                             </tr>
                             {% endfor %}
